// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full-comment snapshots (regression detection) CLA — all signed 1`] = `
"All contributors have signed the CLA  ✍️ ✅<br/><sub>Posted by the **CLA Assistant Lite bot**.</sub>
<!-- cla-lite-bot:cla:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) CLA — multi-committer, one signed one not 1`] = `
"<br/>Thank you for your submission, we really appreciate it. Like many open-source projects, we ask that you all sign our [Contributor License Agreement](https://example.com/CLA.md) before we can accept your contribution. You can sign the CLA by just posting a Pull Request Comment same as the below format.<br/>
   - - -
   I have read the CLA Document and I hereby sign the CLA
   - - -
   **1** out of **2** committers have signed the CLA.<br/>:white_check_mark: [alice](https://github.com/alice)<br/>:x: @bob<br/><sub>Posted by the **CLA Assistant Lite bot**.</sub>
<!-- cla-lite-bot:cla:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) CLA — single unsigned committer (no per-committer list) 1`] = `
"<br/>Thank you for your submission, we really appreciate it. Like many open-source projects, we ask that you sign our [Contributor License Agreement](https://example.com/CLA.md) before we can accept your contribution. You can sign the CLA by just posting a Pull Request Comment same as the below format.<br/>
   - - -
   I have read the CLA Document and I hereby sign the CLA
   - - -
   <sub>Posted by the **CLA Assistant Lite bot**.</sub>
<!-- cla-lite-bot:cla:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) CLA — unknown committer (not a GitHub user) 1`] = `
"<br/>Thank you for your submission, we really appreciate it. Like many open-source projects, we ask that you sign our [Contributor License Agreement](https://example.com/CLA.md) before we can accept your contribution. You can sign the CLA by just posting a Pull Request Comment same as the below format.<br/>
   - - -
   I have read the CLA Document and I hereby sign the CLA
   - - -
   **Local Git Author** seems not to be a GitHub user. You need a GitHub account to be able to sign the CLA. If you have already a GitHub account, please [add the email address used for this commit to your account](https://help.github.com/articles/why-are-my-commits-linked-to-the-wrong-user/#commits-are-not-linked-to-any-user).<br/><sub>Posted by the **CLA Assistant Lite bot**.</sub>
<!-- cla-lite-bot:cla:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) CLA — with suggest-recheck enabled 1`] = `
"<br/>Thank you for your submission, we really appreciate it. Like many open-source projects, we ask that you all sign our [Contributor License Agreement](https://example.com/CLA.md) before we can accept your contribution. You can sign the CLA by just posting a Pull Request Comment same as the below format.<br/>
   - - -
   I have read the CLA Document and I hereby sign the CLA
   - - -
   **1** out of **2** committers have signed the CLA.<br/>:white_check_mark: [alice](https://github.com/alice)<br/>:x: @bob<br/><sub>You can retrigger this bot by commenting **recheck** in this Pull Request. </sub><sub>Posted by the **CLA Assistant Lite bot**.</sub>
<!-- cla-lite-bot:cla:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) DCO — all signed 1`] = `
"All contributors have signed the DCO  ✍️ ✅<br/><sub>Posted by the ****DCO Assistant Lite bot****.</sub>
<!-- cla-lite-bot:dco:wf:job -->"
`;

exports[`full-comment snapshots (regression detection) DCO — multi-committer, one signed one not 1`] = `
"<br/>Thank you for your submission, we really appreciate it. Like many open-source projects, we ask that you all sign our [Developer Certificate of Origin](https://example.com/CLA.md) before we can accept your contribution. You can sign the DCO by just posting a Pull Request Comment same as the below format.<br/>
   - - -
   I have read the DCO Document and I hereby sign the DCO
   - - -
   **1** out of **2** committers have signed the DCO.<br/>:white_check_mark: [alice](https://github.com/alice)<br/>:x: @bob<br/><sub>Posted by the ****DCO Assistant Lite bot****.</sub>
<!-- cla-lite-bot:dco:wf:job -->"
`;
